@@ -14,6 +14,8 @@ Version 1.4.4 - CVS
   - Backport Charset Decoding functions from DEVEL branch. This vastly
     increases the number of supported character sets and the performance
     of decoding.
+  - Add src/configtest.php script which checks for common errors in the
+    config.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
